# binaryx_app

./: .dockerignore  .env.example  .gitignore  Dockerfile.prod  Makefile  README.md  package-lock.json  package.json  package.json.orig  tsconfig.json
 .github / workflows /: docker-image.yml
.github/workflows/: api.yml  frontend.yml
api/: .env.example  .gitignore  docker-compose.yml  entry.sh  ormconfig.ts  package-lock.json  package.json  tsconfig.json  typescript
api/infra/: config.js  docker.js
api/src/: app.module.ts
arb/: .env.example  hardhat.config.ts  objectUtils.ts  package-lock.json  package.json  readme.md  testUtils.ts
arb/contracts/: AssetsToken.sol  BNRXToken.sol  IAssetsInvestmentsManager.sol  IAssetsTokenManager.sol  M1155.sol  Manager.sol  PropertyToken.sol  UsdtfToken.sol
arb/mermaid/: AssetDetailsPage.md  BuyTokens.md  (+5 more)
backend/: .env.example  Dockerfile  ormconfig.ts  package.json  schema.gql  tsconfig.json
backend_v/: .env.test  .gitignore
contract/: commands
contracts_arbitrum/: .env.example  .gitignore  deployConfig.json  hardhat.config.ts  package-lock.json  package.json  readme.md  tsconfig.json
contracts_near/asset/: Cargo.toml
contracts_near/asset/src/: external.rs  lib.rs
frontend/: .dockerignore  .eslintrc.json  .prettierignore  Dockerfile  entry.sh  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
infra/: .env.example  connect.js  package.json  readme.md  servers.js
pkg/: formType.ts  paths.ts
scripts/: docker_setup_init_prod.sh
src/: schema.gql
test/: app.request-spec.ts
(+668 files in other folders)
